# poo-proiect

./: CMakeLists.txt  README.md  main.cpp
headers/: Animal.h  Crop.h  Item.h  Player.h  Time.h
src/: Animal.cpp  Crop.cpp  Item.cpp  Player.cpp  Time.cpp
